--- a/modulo-java/aula5-app-spring-datas/src/main/resources/application.properties
+++ b/modulo-java/aula5-app-spring-datas/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 
 server.port=5000
 ## MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/banco_tarefas
+spring.datasource.url=jdbc:mysql://172.17.0.2:3306/banco_tarefas
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 
 
 #drop n create table again, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
