Implementa modificacoes na aplicacao da aula 8, migrations, e endpoint put

--- a/modulo-java/aula8-app-spring-crud/src/main/resources/application.properties
+++ b/modulo-java/aula8-app-spring-crud/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://172.17.0.2:3306/banco_crud?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://172.17.0.2:3306/banco_migration?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
